Fix mobile overlap

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -20,6 +20,8 @@
 
   @media (--mediaMobile), (--mediaMobileLS) {
     bottom: auto;
+    right: unset;
+    left: var(--spaceOuter);
   }
 }
 
