--- a/src/components/Navbar/ThemeToggle.module.css
+++ b/src/components/Navbar/ThemeToggle.module.css
@@ -9,6 +9,8 @@
   transform: translate3d(0, 0, 0);
 
   @media (--mediaMobile), (--mediaMobileLS) {
+    left: unset;
+    right: var(--inset);
     &:not([data-mobile='true']) {
       display: none;
     }
